<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_sort"
        android:layout_width="@dimen/constraint_layout_zero_dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/bg_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_keyboard_arrow"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_sort"
        app:layout_constraintEnd_toEndOf="@+id/spinner_sort"
        app:layout_constraintTop_toTopOf="@+id/spinner_sort" />

</androidx.constraintlayout.widget.ConstraintLayout>