...
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_search_background">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="@dimen/constraint_layout_zero_dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/cl_cancel"
            android:background="@color/transparent"
...
