<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout_suggestions"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
...
                    app:layout_constraintStart_toStartOf="@+id/tv_recent_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_recent_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recently_listened"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:nestedScrollingEnabled="false"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
...
